# spaghetti

./: .editorconfig  .gitignore  LICENSE  README.md  makefile.py  pyproject.toml
.github/workflows/: ci.yml
spaghetti/: cmd.py  log.py
spaghetti/filtering/: interface.py
spaghetti/filtering/implementations/: chain.py  configurable.py  exclude_patterns.py  filter_patterns.py  hide_modules_without_links.py  limit_max_depth.py  strip_non_local_modules.py
spaghetti/io/: interfaces.py
spaghetti/io/implementations/: file.py  stream.py
spaghetti/models/: module.py  parse_result.py  project_dependencies.py
spaghetti/parser/: import_declaration.py  import_node_visitor.py  module_resolver.py  source_parser.py
spaghetti/parsing/: module_resolver.py  source_parser.py
spaghetti/report/: interface.py
spaghetti/report/implementations/: console_report.py  graph_report.py  plantuml_report.py
spaghetti/reporting/: interface.py
spaghetti/reporting/implementations/: console_report.py  graph_report.py  plantuml_report.py  text_stream_report.py
spaghetti/result/filters/: chain.py  interface.py
spaghetti/result/filters/implementations/: configurable.py  exclude_patterns.py  filter_patterns.py  hide_modules_without_links.py  limit_max_depth.py  strip_non_local_modules.py
spaghetti/result/io/: interfaces.py
spaghetti/result/io/implementations/: file.py  stream.py
spaghetti/result/serializers/: interface.py
spaghetti/result/serializers/implementations/: json_serializer.py
spaghetti/serialization/: interface.py
spaghetti/serialization/implementations/: json_serializer.py
spaghetti/tests/: conftest.py  test_cmd.py  test_io.py  test_serializers.py
spaghetti/tests/filtering/: test_chain.py  test_exclude_patterns.py  test_filter_patterns.py  test_hide_modules_without_links.py  test_limit_max_depth.py  test_strip_non_local_modules.py
spaghetti/tests/fixtures/module/c/: __init__.py
spaghetti/tests/models/: test_module.py  test_project_dependencies.py
spaghetti/tests/parsing/: test_import_declaration.py  test_module_resolver.py  test_source_parser.py
spaghetti/tests/reporting/: test_reports.py
tests/: conftest.py  test_cmd.py
tests/fixtures/module/a/: __init__.py
tests/models/: test_module.py  test_parse_result.py
tests/parser/: test_import_declaration.py  test_module_resolver.py  test_source_parser.py
tests/report/: test_reports.py
tests/result/: test_filters.py  test_io.py  test_serializers.py
tests/result/filters/: test_chain.py  test_exclude_patterns.py  test_filter_patterns.py  test_hide_modules_without_links.py  test_limit_max_depth.py  test_strip_non_local_modules.py
