[tool.poetry]
name = "spaghetti"
version = "0.1.0"
description = "Who doesn't like spaghetti?"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.6.0"
structlog = "^22.1.0"
typing-extensions = "^4.4.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
flakeheaven = "^3.2.1"
black = "^22.10.0"
isort = "^5.10.1"
flake8-isort = "^5.0.0"
pytest = "^7.2.0"
duct = "^0.6.4"

[tool.poetry.scripts]
fmt = "makefile:format"
lint = "makefile:lint"
spaghetti = "spaghetti.cmd:run"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.flakeheaven]
# optionally inherit from remote config (or local if you want)
base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
# make output nice
format = "grouped"
# 80 chars aren't enough in 21 century
max_line_length = 120
# show line of source code in output
show_source = true

[tool.flakeheaven.plugins]
flake8-isort = ["+*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
