[tool.poetry]
name = "spaghetti"
version = "0.2.0"
description = "Who doesn't like spaghetti?"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.6.0"
structlog = "^22.1.0"
typing-extensions = "^4.4.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
flakeheaven = "^3.2.1"
black = "^22.10.0"
isort = "^5.10.1"
flake8-isort = "^5.0.0"
pytest = "^7.2.0"
duct = "^0.6.4"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
flake8-bandit = "3.0.0"
flake8-bugbear = "^22.10.27"
mypy = "^0.990"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
spaghetti = "spaghetti.cmd:run"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.flakeheaven]
format = "grouped"
max_line_length = 100
show_source = true

[tool.flakeheaven.plugins]
flake8-bandit = ["+*"]
flake8-bugbear = ["+*"]
flake8-isort = ["+*"]
pyflakes = ["+*"]
pycodestyle = ["+*", "-W503"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.coverage]
[tool.coverage.report]
omit = [
    "makefile.py"
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = "tests/fixtures"

[[tool.mypy.overrides]]
module = "duct"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
